chgmgmt_build/src/objects/Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Answer1__c</fullName>
        <label>回答1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessManner__c</fullName>
        <label>ビジネスマナー</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <label>コミュニケーション</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EvaluationDate__c</fullName>
        <label>評価日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EvaluationEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>評価イベント</label>
        <referenceTo>EvaluationEvent__c</referenceTo>
        <relationshipLabel>アセスメント</relationshipLabel>
        <relationshipName>Assessment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluation__c</fullName>
        <label>総合評価</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>完了</fullName>
                </value>
                <value>
                    <fullName>保留</fullName>
                </value>
                <value>
                    <fullName>未完了</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>不正行為など</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>問題なし</fullName>
                </value>
                <value>
                    <fullName>問題あり</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>不当要求・脅迫</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>問題なし</fullName>
                </value>
                <value>
                    <fullName>問題あり</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kintai__c</fullName>
        <label>勤怠</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <formula>EvaluationEvent__r.Q1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>設問内容1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <formula>EvaluationEvent__r.Q2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>設問内容2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResEff__c</fullName>
        <label>責任・効率</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>スタッフ</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>アセスメント</relationshipLabel>
        <relationshipName>Assessment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <label>回答2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>アセスメント</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>MyAssessment</fullName>
        <columns>NAME</columns>
        <columns>Staff__c</columns>
        <columns>Field1__c</columns>
        <columns>ResEff__c</columns>
        <columns>Communication__c</columns>
        <columns>BusinessManner__c</columns>
        <columns>Kintai__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field4__c</columns>
        <columns>Evaluation__c</columns>
        <columns>Field6__c</columns>
        <filterScope>Mine</filterScope>
        <label>担当スタッフのアセスメント</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>アセスメント番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>アセスメント</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>